syntax= "proto3";

package proto;
option java_package = "generatedClasses";


message LoginRequest {
  string username = 1;
  string password = 2;
}
