syntax = "proto3";

package proto;
import "User.proto";
option java_package = "generatedClasses";


message RegisterRequest {
  User user = 1;

}


