syntax="proto3";

package proto;
option java_package = "generatedClasses";


message StaffResponse{
  int32 staff_id = 1;
  string name = 2;
  string personal_phone = 3;
  string emergency_contact_number = 4;
  string position = 5;
  string citizenship_photo = 6;
  string contact_doc_pdf = 7;
  string join_date = 8;
  string contact_renew_date = 9;
}