syntax= "proto3";

package proto;
option java_package = "generatedClasses";


enum UserRole {
  MEMBER = 0;
  ADMIN = 1;
  SUPER_ADMIN = 2;
}

message User {
  int32 user_id=1;
  string username = 2;
  string password = 3;
  string name = 4;
  string email = 5;
  string phone = 6;
  UserRole role = 7;
}


